fixed image slider button positions on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -430,6 +430,10 @@ h2.hero-title__second {
       font-weight: 300;
     }
   }
+  .mds-next,
+  .mds-prev {
+    top: 45%;
+  }
 }
 
 // title specific media queries for medium devices
